# SPDX-FileCopyrightText: 2023 Rice University
# SPDX-FileCopyrightText: 2024 Contributors to the HPCToolkit Project
#
# SPDX-License-Identifier: BSD-3-Clause

option('manpages', type: 'feature', description: 'Include and install man pages')
option('extended_tests', type: 'feature', description: 'Enable tests that require additional dependencies than those used for the build')

option('hpcprof_mpi', type: 'feature', description: 'Build hpcprof-mpi')

option(
  'python',
  type: 'feature',
  description: 'Enable Python unwinder (experimental)',
)

option('papi', type: 'feature', description: 'Enable PAPI metrics')
option('cuda', type: 'feature', description: 'Enable CUDA metrics')
option('level0', type: 'feature', description: 'Enable Level 0 metrics')
option(
  'gtpin',
  type: 'feature',
  description: 'Enable Level 0 instrumentation metrics',
)
option('opencl', type: 'feature', description: 'Enable OpenCL metrics')
option('rocm', type: 'feature', description: 'Enable ROCm metrics')

option(
  'valgrind_annotations',
  type: 'boolean',
  value: false,
  description: 'Inject annotations for Valgrind debugging',
)

option('hip_args', type: 'array', description: 'Arguments to pass to HIP compile line (i.e. <lang>_args)')
option('hip_link_args', type: 'array', description: 'Arguments to pass to HIP link line (i.e. <lang>_link_args)')

option('sycl_args', type: 'array', description: 'Arguments to pass to SYCL compile line (i.e. <lang>_args)')
option('sycl_link_args', type: 'array', description: 'Arguments to pass to SYCL link line (i.e. <lang>_link_args)')

option(
  'rocprofiler_metrics_xml',
  type: 'string',
  value: '',
  description: 'Full path to the metrics.xml file shipped by ROCprofiler',
)
